Iteration 4: Added carrot cake page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <p><a href="./recipes/tacos.html">Tacos</a></p>
+    <p><a href="./recipes/carrotCake.html">Carrot Cake</a></p>
 </body>
 </html>
