Iteration 5: Added Pimm's page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <p><a href="./recipes/tacos.html">Tacos</a></p>
     <p><a href="./recipes/carrotCake.html">Carrot Cake</a></p>
+    <p><a href="./recipes/pomPimms.html">Pomegranate Pimm's</a></p>
 </body>
 </html>
