Correcting minor page content mistakes

--- a/recipes/pomPimms.html
+++ b/recipes/pomPimms.html
@@ -16,10 +16,10 @@
         <h2>Ingredients</h2>
     <ul>
         <li>200ml Pimm's</li>
-        <li>100g natural yogurt</li>
-        <li>1½ tsp vanilla extract</li>
-        <li>½ orange, zested</li>
-
+        <li>200ml pomegranate juice</li>
+        <li>15cm chunk of cucumber</li>
+        <li>100g pomegranate seeds</li>
+        <li>600ml chilled lemonade</li>
     </ul>
 
     <h2>Steps</h2>
