Adding CSS styles: initial commit

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="./recipes/tacos.html">Tacos</a></p>
-    <p><a href="./recipes/carrotCake.html">Carrot Cake</a></p>
-    <p><a href="./recipes/pomPimms.html">Pomegranate Pimm's</a></p>
+    <p class="link"><a href="./recipes/tacos.html">Tacos</a></p>
+    <p class="link"><a href="./recipes/carrotCake.html">Carrot Cake</a></p>
+    <p class="link"><a href="./recipes/pomPimms.html">Pomegranate Pimm's</a></p>
 </body>
 </html>
