applying CSS styles continued

--- a/recipes/carrotCake.html
+++ b/recipes/carrotCake.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Carrot Cake</h1>
-    <p><img src="carrot-cake.png" alt="A delicious carrot cake, good enough to make Mary Berry weep"></p>
+    <p><img class="format" src="carrot-cake.png" alt="A delicious carrot cake, good enough to make Mary Berry weep"></p>
     <h4>Mary Berry approved!</h4>
 
     <p>Top this classic carrot cake with moreish icing and chopped walnuts or pecans. Serve as a sweet treat with a cup of tea any time of the day.</p>
