--- a/recipes/pomPimms.html
+++ b/recipes/pomPimms.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Pomegranate Pimm's</h1>
-    <p><img src="pom-pimms.png" alt="Jug of delicious fruity Pimm's"></p>
+    <p><img class="format" src="pom-pimms.png" alt="Jug of delicious fruity Pimm's"></p>
     <h4>At least some of your five a day!</h4>
 
     <p>Add an extra fruity twist to this classic summer drink with pomegranate juice and seeds - double up the quantities to please a crowd</p>
