--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Tacos</h1>
-    <p><img src="taco.jpg" alt="tacos and dinosaurs my dude, as God intended"></p>
+    <p><img class="format" src="taco.jpg" alt="tacos and dinosaurs my dude, as God intended"></p>
     <h4>mmmmmmm delicious dinotacos</h4>
 
     <p>something about dinosaur tacos, if it's anything like a normal food blog recipe these paragraphs will be long-winded essays on a pleasant childhood memory,
