--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <p class="link"><a href="./recipes/tacos.html">Tacos</a></p>
     <p class="link"><a href="./recipes/carrotCake.html">Carrot Cake</a></p>
     <p class="link"><a href="./recipes/pomPimms.html">Pomegranate Pimm's</a></p>
