commit 2: fixed link to style sheet

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tacos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/home/luckfish/repos/odin-recipes/styles.css">
 </head>
 <body>
-    <h1>Tacos</h1>
+    <h1 class="title">Tacos</h1>
     <p><img class="format" src="taco.jpg" alt="tacos and dinosaurs my dude, as God intended"></p>
     <h4>mmmmmmm delicious dinotacos</h4>
 
@@ -50,5 +50,7 @@
             <li>Fill the shells with the meat, salsa and guacamole or lay everything out and let everyone help themselves.</li>
         </ol>
      
+    <p class="link"><a href="/home/luckfish/repos/odin-recipes/index.html">Home</a></p>
+
 </body>
 </html>
