--- a/recipes/carrotCake.html
+++ b/recipes/carrotCake.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrot Cake</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/home/luckfish/repos/odin-recipes/styles.css">
 </head>
 <body>
-    <h1>Carrot Cake</h1>
+    <h1 class="title">Carrot Cake</h1>
     <p><img class="format" src="carrot-cake.png" alt="A delicious carrot cake, good enough to make Mary Berry weep"></p>
     <h4>Mary Berry approved!</h4>
 
@@ -39,6 +39,8 @@
             <li>Bake for 25-30 mins or until a skewer inserted into the centre of the cake comes out clean. If any wet mixture clings to the skewer, return to the oven for 5 mins, then check again. Leave to cool in the tins.</li>
             <li>To make the icing, beat the butter and sugar together until smooth. Add half the soft cheese and beat again, then add the rest (adding it bit by bit prevents the icing from splitting). Remove the cakes from the tins and sandwich together with half the icing. Top with the remaining icing and scatter with the remaining walnuts. Will keep in the fridge for up to five days. Best eaten at room temperature.</li>
         </ol>
+
+    <p class="link"><a href="/home/luckfish/repos/odin-recipes/index.html">Home</a></p>
      
 </body>
 </html>
