finally got css styles applied as wanted.

--- a/recipes/pomPimms.html
+++ b/recipes/pomPimms.html
@@ -12,15 +12,15 @@
     <p><img class="format" src="pom-pimms.png" alt="Jug of delicious fruity Pimm's"></p>
     <h4>At least some of your five a day!</h4>
 
-    <p>Add an extra fruity twist to this classic summer drink with pomegranate juice and seeds - double up the quantities to please a crowd</p>
+    <p class="intro">Add an extra fruity twist to this classic summer drink with pomegranate juice and seeds - double up the quantities to please a crowd</p>
        
-        <h2>Ingredients</h2>
+    <h2>Ingredients</h2>
     <ul>
-        <li class="ingredients">200ml Pimm's</li>
-        <li class="ingredients">200ml pomegranate juice</li>
-        <li class="ingredients">15cm chunk of cucumber</li>
-        <li class="ingredients">100g pomegranate seeds</li>
-        <li class="ingredients">600ml chilled lemonade</li>
+        <li>200ml Pimm's</li>
+        <li>200ml pomegranate juice</li>
+        <li>15cm chunk of cucumber</li>
+        <li>100g pomegranate seeds</li>
+        <li>600ml chilled lemonade</li>
     </ul>
 
     <h2>Steps</h2>
