--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -12,10 +12,10 @@
     <p><img class="format" src="taco.jpg" alt="tacos and dinosaurs my dude, as God intended"></p>
     <h4>mmmmmmm delicious dinotacos</h4>
 
-    <p>something about dinosaur tacos, if it's anything like a normal food blog recipe these paragraphs will be long-winded essays on a pleasant childhood memory,
-    something that reminds me of my Granddad or some BS story aboout my children that makes me sound a much better parent than I am.</p>
+    <p class="intro">something about dinosaur tacos, if it's anything like a normal food blog recipe these paragraphs will be long-winded essays on a pleasant childhood memory,</p>
+    <p class="intro">something that reminds me of my Granddad or some BS story aboout my children that makes me sound a much better parent than I am.</p>
        
-    <p>Just get to the tacos FFS.</p>
+    <p class="intro">Just get to the tacos FFS.</p>
 
     <h2>Ingredients</h2>
     <ul>
