--- a/recipes/pomPimms.html
+++ b/recipes/pomPimms.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomegranate Pimm's</title>
-    <link rel="stylesheet" href="/home/luckfish/repos/odin-recipes/styles.css">
+    <link rel="stylesheet" href="odin-recipes/styles.css">
 </head>
 <body>
     <h1 class="title">Pomegranate Pimm's</h1>
