still trying to get home link to work

--- a/recipes/carrotCake.html
+++ b/recipes/carrotCake.html
@@ -40,7 +40,7 @@
             <li>To make the icing, beat the butter and sugar together until smooth. Add half the soft cheese and beat again, then add the rest (adding it bit by bit prevents the icing from splitting). Remove the cakes from the tins and sandwich together with half the icing. Top with the remaining icing and scatter with the remaining walnuts. Will keep in the fridge for up to five days. Best eaten at room temperature.</li>
         </ol>
 
-    <p class="link"><a href="odin-recipes/index.html">Home</a></p>
+    <p class="link"><a href="repos/odin-recipes/index.html">Home</a></p>
      
 </body>
 </html>
