--- a/recipes/pomPimms.html
+++ b/recipes/pomPimms.html
@@ -30,7 +30,7 @@
             and add some ice to the prepared glasses.</li>
         </ol>
      
-    <p class="link"><a href="odin-recipes/index.html">Home</a></p>
+    <p class="link"><a href="repos/odin-recipes/index.html">Home</a></p>
         
 </body>
 </html>
