--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -50,7 +50,7 @@
             <li>Fill the shells with the meat, salsa and guacamole or lay everything out and let everyone help themselves.</li>
         </ol>
      
-    <p class="link"><a href="odin-recipes/index.html">Home</a></p>
+    <p class="link"><a href="repos/odin-recipes/index.html">Home</a></p>
 
 </body>
 </html>
