--- a/recipes/pomPimms.html
+++ b/recipes/pomPimms.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomegranate Pimm's</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1 class="title">Pomegranate Pimm's</h1>
@@ -30,7 +30,7 @@
             and add some ice to the prepared glasses.</li>
         </ol>
      
-    <p class="link"><a href="luckfishlai.github.io/odin-recipes/index.html">Home</a></p>
+    <p class="link"><a href="../index.html">Home</a></p>
         
 </body>
 </html>
