--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tacos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1 class="title">Tacos</h1>
@@ -50,7 +50,7 @@
             <li>Fill the shells with the meat, salsa and guacamole or lay everything out and let everyone help themselves.</li>
         </ol>
      
-    <p class="link"><a href="luckfishlai.github.io/odin-recipes/index.html">Home</a></p>
+    <p class="link"><a href="../index.html">Home</a></p>
 
 </body>
 </html>
